Notmuch 0.21 (2015-10-29)
=========================

General
-------

Notmuch now requires gmime >= 2.6.7. The gmime 2.4 series is no longer
supported.

Database revision tracking: `lastmod:` queries

  Each message now has a metadata revision number that increases with
  every tagging operation. See the discussion of `lastmod:` in
  `notmuch-search-terms(7)` for more information.

Date queries now support `date:<expr>..!` shorthand for
`date:<expr>..<expr>`

  You can use, for example, `date:yesterday..!` to match from the
  beginning of yesterday to the end of yesterday. For further details,
  please refer to the `notmuch-search-terms` manual page.

Notmuch database upgrade to support `lastmod:` queries

  The above mentioned `lastmod:` prefix. This will be done
  automatically, without prompting on the next time `notmuch new` is
  run after the upgrade. The upgrade is not reversible, and the
  upgraded database will not be readable by older versions of
  Notmuch. As a safeguard, a database dump will be created in the
  `.notmuch` directory before upgrading.

Build System
------------

The ruby bindings are now built as part of the main notmuch build
process. This can be disabled with the `--without-ruby` option to
configure.

Building the documentation can be disabled with the `--without-docs`
option to configure.

Skipped individual tests are no longer considered as failures.

Command Line Interface
----------------------

Database revision tracking

  Two new options were added to support revision tracking. A global
  option "--uuid" (`notmuch(1)`) was added for to detect counter
  rollover and reinitialization, and `notmuch-count(1)` gained a
  `--lastmod` option to query database revision tracking data.

The `notmuch address` command supports new deduplication schemes

  `notmuch address` has gained a new `--deduplicate` option to specify
  how the results should be deduplicated, if at all. The alternatives